--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   <div>
       <nav class="navbar navbar-expand-lg navbar-light border-bottom" style="position:sticky; top:0px;">
         <a class="navbar-brand" href="./">
-          <img src="img/Logo_Lejourney_600px.png" class="lj_logo"></a>
+          <img src="./img/Logo_Lejourney_600px.png" class="lj_logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
   <div class="container d-flex justify-content-center box container_box  allcontentbox" style="margin-top:12;">
     <!-- login img start -->
     <div class="allcontentboxleft">
-      <div><img src="/img/svg/img_login.svg" alt="login"></div>
+      <div><img src="./img/svg/img_login.svg" alt="login"></div>
     </div>
     <!-- <div class="col-6 box_log">
     <div class="changeImg"><img src="/img/svg/img_login.svg" alt="login"></div>
@@ -335,7 +335,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
   </script>
-  <script src="/js/all.js"></script>
+  <script src="./js/all.js"></script>
 
 </body>
 
