--- a/LandingPage.html
+++ b/LandingPage.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lejounery-The Learning Adviser</title>
   <link rel="shortcut icon" type="image/x-icon" href="img/LJ.ico" />
-  <link rel="stylesheet" href="/css/base.min.css">
-  <link rel="stylesheet" href="/css/landingPageStyle.min.css">
+  <link rel="stylesheet" href="./css/base.min.css">
+  <link rel="stylesheet" href="./css/loginstyl.min.css">
 </head>
 
 <body>
