--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lejounery-The Learning Adviser</title>
-  <link rel="shortcut icon" type="image/x-icon" href="img/LJ.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="./img/LJ.ico" />
   <link rel="stylesheet" href="./css/base.min.css">
   <link rel="stylesheet" href="./css/landingPageStyle.min.css">
+  <link rel="stylesheet" href="./dist/style/bootstrap.min.css">
+  <link rel="stylesheet" href="./dist/style/main.min.css">
 </head>
 
 <body>
