--- a/login.html
+++ b/login.html
@@ -335,7 +335,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
   </script>
-  <script src="./js/all.js"></script>
+  <script src="./dist/js/all.js"></script>
 
 </body>
 
