--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
   <!-- 181105 -->
   <div class="" style="position:sticky; top:0px; background-color: #fefefe; z-index:999;">
     <!-- <nav class="navbar navbar-expand-lg navbar-light border-bottom gradient" style="position:sticky; top:0px;background-color: #fefefe;"> -->
-      <nav class="navbar navbar-expand-lg navbar-light border-bottom" style="position:sticky; top:0px;">
-        <a class="navbar-brand" href="./">
-          <img src="img/Logo_Lejourney_600px.png" class="lj_logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse nv_trans" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">
-                <span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0 nv_mobile nv_color">
-            <li class="nav-item text-white-M4 header-item">
-              <a class="nav-link" href="./login.html">Log in</a>
-            </li>
-            <li class="nav-item text-white-M4 header-item">
-              <a class="nav-link" href="./login.html">Sign up</a>
-            </li>
-          </form>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom" style="position:sticky; top:0px; color:rgba(169, 169, 169, 0.1);">
+      <a class="navbar-brand" href="#">
+        <img src="img/Logo_Lejourney_600px.png" class="lj_logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse nv_trans" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <!-- <li class="nav-item active">
+          <a class="nav-link" href="#">
+            <span class="sr-only">(current)</span></a>
+        </li> -->
+        </ul>
+        <form class="form-inline my-2 my-lg-0 nv_mobile nv_color">
+          <li class=" nav-item " style="list-style: none;">
+            <a class="nav-link" href="./login.html">Log in</a>
+          </li>
+          <li class="nav-item" style="list-style: none;">
+            <a class="nav-link" href="./login.html">Sign up</a>
+          </li>
+        </form>
+      </div>
+    </nav>
   </div>
   <!-- header end -->
   <div class="landingpage">
