--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <li class="nav-item text-white-M4 header-item">
               <a class="nav-link" href="./login.html">Log in</a>
             </li>
-            <li class="nav-item text-white-M4 header-item">
+            <li class="nav-item text-white-M4 header-item" id="signUp">
               <a class="nav-link" href="./login.html">Sign up</a>
             </li>
           </form>
